<resources>
    <string name="app_name">Film search</string>
    <string name="image_view_sub_text">Успех обеспечен! Надо лишь\nподойти, и взять…</string>
    <string name="image_view_test_button">В космос!</string>
    <string name="main_subtitle_button_group_1">Группа кнопок 1</string>
    <string name="main_button_title_menu">Меню</string>
    <string name="main_button_title_favorites">Избранное</string>
    <string name="main_button_title_watch_later">Посмотреть позже</string>
    <string name="main_button_title_recommendations">Подборки</string>
    <string name="main_button_title_settings">Настройки</string>
    <string name="main_topbar_description">Постеры взяты с ресурса КиноПоиск</string>
    <string name="menu_selections_title">Подборки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_button_title_home">Главная</string>
    <string name="menu_settings_title">Настройки</string>
    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>
    <string name="error_getting_server_data_snackbar">Ошибка загрузки из сети…</string>
    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>
    <string name="download_failed">Ошибка закачки...</string>
    <string name="save_failed">Ошибка сохранения</string>
    <string name="condition_receiver_action_power_plugged_toast">Питание подключено...</string>
    <string name="condition_receiver_action_low_battery_toast">Низкий заряд батареи!</string>
    <string name="notif_channel_reminders_title">Напоминания</string>
    <string name="notification_film_watch_reminder_title">Напоминание</string>
    <string name="notification_film_watch_reminder_text">Посмотрите на этот фильм!..</string>
    <string name="notification_scheduled_snackbar">Уведомление запланировано на время: %s</string>
    <string name="scheduled_notifications_screen_title">Отложенные уведомления</string>
    <string name="edit_button_text">Редактировать</string>
    <string name="cancel_button_text">Отменить</string>
    <string name="notification_cancelled">Уведомление отменено</string>
    <string name="notification_updated">Уведомление обновлено: %s</string>
    <string name="scheduled_notifications_menu_item">Отложенные уведомления</string>
    <string name="pro_feature__subscription_advice">Пробный период истек. Купите PRO версию!</string>
</resources>