<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/backgroundColor"
	tools:context=".activities.MainActivity"
	tools:ignore="ContentDescription">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@+id/topBar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/topAppBar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@color/colorPrimary"
			app:menu="@menu/top_app_bar"
			app:navigationIcon="@drawable/ic_vector_nav"
			app:title="@string/app_name" />
		<!--		FIXME не получилось сделать все иконки белыми (меню), поэтому они чёрные-->
		<!--	app:navigationIconTint="@color/white"-->

	</com.google.android.material.appbar.AppBarLayout>

	<androidx.cardview.widget.CardView
		android:id="@+id/topBar"
		android:layout_width="match_parent"
		android:layout_height="100dp"
		android:layout_marginStart="5dp"
		android:layout_marginEnd="5dp"
		app:cardCornerRadius="20dp"
		app:cardElevation="25dp"
		app:layout_constraintBottom_toTopOf="@id/topBarDescription"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@id/appBar">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:scaleType="centerCrop"
				android:src="@drawable/ic_poster_lotr" />

			<ImageView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:scaleType="centerCrop"
				android:src="@drawable/ic_poster_thor" />

			<ImageView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:scaleType="centerCrop"
				android:src="@drawable/ic_poster_cpt_marvel" />

		</LinearLayout>

	</androidx.cardview.widget.CardView>

	<TextView
		android:id="@+id/topBarDescription"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:background="@drawable/rectangle"
		android:gravity="center"
		android:text="@string/main_topbar_description"
		app:layout_constraintTop_toBottomOf="@+id/topBar" />

	<androidx.cardview.widget.CardView
		android:id="@+id/contents"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="25dp"
		app:cardBackgroundColor="@color/backgroundColor"
		app:cardCornerRadius="10dp"
		app:cardElevation="15dp"
		app:contentPadding="0dp"
		app:layout_constraintBottom_toTopOf="@id/button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/topBarDescription">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center|top"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textButtonGroup1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="6dp"
				android:layout_marginBottom="1dp"
				android:background="@drawable/rectangle"
				android:paddingStart="8dp"
				android:text="@string/main_subtitle_button_group_1"
				android:textColor="@color/colorAccent"
				tools:ignore="RtlSymmetry" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="center|top"
				android:background="@drawable/main_menu_gradient_shape"
				android:orientation="vertical">

				<Button
					android:id="@+id/buttonMenu"
					style="@style/MainMenuButton"
					android:text="@string/main_button_title_menu" />

				<Button
					android:id="@+id/buttonFavorites"
					style="@style/MainMenuButton"
					android:text="@string/main_button_title_favorites" />

				<Button
					android:id="@+id/buttonWatchLater"
					style="@style/MainMenuButton"
					android:text="@string/main_button_title_watch_later" />

				<Button
					android:id="@+id/buttonRecommendations"
					style="@style/MainMenuButton"
					android:text="@string/main_button_title_recommendations" />

				<Button
					android:id="@+id/buttonSettings"
					style="@style/MainMenuButton"
					android:text="@string/main_button_title_settings" />

			</LinearLayout>

		</LinearLayout>

	</androidx.cardview.widget.CardView>

	<Button
		android:id="@+id/button"
		style="@style/RoundButton.SilverText.Bigger"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Styled Button"
		android:textAppearance="@style/ButtonTextShadow"
		app:layout_constraintBottom_toTopOf="@+id/subscribeView"
		app:layout_constraintEnd_toStartOf="@id/textView"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/contents" />

	<TextView
		android:id="@+id/textView"
		style="@style/CustomYellowTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Styled TextView"
		android:textAppearance="@style/TextViewYellowShadow"
		app:layout_constraintBottom_toBottomOf="@+id/button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/button"
		app:layout_constraintTop_toTopOf="@+id/button" />

	<com.igoryan94.filmsearch.views.SubscribeView
		android:id="@+id/subscribeView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@id/bottomButtons"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button" />

	<LinearLayout
		android:id="@+id/bottomButtons"
		android:layout_width="match_parent"
		android:layout_height="70dp"
		android:background="@drawable/rectangle"
		android:backgroundTint="@color/colorPrimaryDark"
		android:backgroundTintMode="screen"
		android:orientation="horizontal"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>